parsing/GeneratedParsingCode/CQasm3Parser.py
# Generated from CQasm3.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CQasm3Parser ( Parser ):

    grammarFileName = "CQasm3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'\\r\\n'", "'\\n'", "'3.0'", "'qubit['", 
                     "']'", "','", "'['", "':'", "'-'", "'version'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "VERSION", 
                      "ID", "FLOAT", "INT", "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_stateSep = 0
    RULE_prog = 1
    RULE_qubitRegisterDeclaration = 2
    RULE_gateApplication = 3
    RULE_expr = 4

    ruleNames =  [ "stateSep", "prog", "qubitRegisterDeclaration", "gateApplication", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    VERSION=11
    ID=12
    FLOAT=13
    INT=14
    WS=15
    COMMENT=16
    MULTILINE_COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StateSepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CQasm3Parser.RULE_stateSep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateSep" ):
                listener.enterStateSep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateSep" ):
                listener.exitStateSep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateSep" ):
                return visitor.visitStateSep(self)
            else:
                return visitor.visitChildren(self)




    def stateSep(self):

        localctx = CQasm3Parser.StateSepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stateSep)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(CQasm3Parser.VERSION, 0)

        def stateSep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CQasm3Parser.StateSepContext)
            else:
                return self.getTypedRuleContext(CQasm3Parser.StateSepContext,i)


        def qubitRegisterDeclaration(self):
            return self.getTypedRuleContext(CQasm3Parser.QubitRegisterDeclarationContext,0)


        def EOF(self):
            return self.getToken(CQasm3Parser.EOF, 0)

        def gateApplication(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CQasm3Parser.GateApplicationContext)
            else:
                return self.getTypedRuleContext(CQasm3Parser.GateApplicationContext,i)


        def getRuleIndex(self):
            return CQasm3Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = CQasm3Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 15
                self.stateSep()


            self.state = 18
            self.match(CQasm3Parser.VERSION)
            self.state = 19
            self.match(CQasm3Parser.T__3)
            self.state = 20
            self.stateSep()
            self.state = 21
            self.qubitRegisterDeclaration()
            self.state = 27
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 22
                    self.stateSep()
                    self.state = 23
                    self.gateApplication() 
                self.state = 29
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 30
                self.stateSep()


            self.state = 33
            self.match(CQasm3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QubitRegisterDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CQasm3Parser.INT, 0)

        def ID(self):
            return self.getToken(CQasm3Parser.ID, 0)

        def getRuleIndex(self):
            return CQasm3Parser.RULE_qubitRegisterDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQubitRegisterDeclaration" ):
                listener.enterQubitRegisterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQubitRegisterDeclaration" ):
                listener.exitQubitRegisterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQubitRegisterDeclaration" ):
                return visitor.visitQubitRegisterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def qubitRegisterDeclaration(self):

        localctx = CQasm3Parser.QubitRegisterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qubitRegisterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(CQasm3Parser.T__4)
            self.state = 36
            self.match(CQasm3Parser.INT)
            self.state = 37
            self.match(CQasm3Parser.T__5)
            self.state = 38
            self.match(CQasm3Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GateApplicationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CQasm3Parser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CQasm3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(CQasm3Parser.ExprContext,i)


        def getRuleIndex(self):
            return CQasm3Parser.RULE_gateApplication

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGateApplication" ):
                listener.enterGateApplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGateApplication" ):
                listener.exitGateApplication(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGateApplication" ):
                return visitor.visitGateApplication(self)
            else:
                return visitor.visitChildren(self)




    def gateApplication(self):

        localctx = CQasm3Parser.GateApplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_gateApplication)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(CQasm3Parser.ID)
            self.state = 41
            self.expr()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 42
                self.match(CQasm3Parser.T__6)
                self.state = 43
                self.expr()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CQasm3Parser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NegatedFloatLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(CQasm3Parser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegatedFloatLiteral" ):
                listener.enterNegatedFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegatedFloatLiteral" ):
                listener.exitNegatedFloatLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegatedFloatLiteral" ):
                return visitor.visitNegatedFloatLiteral(self)
            else:
                return visitor.visitChildren(self)


    class QubitContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CQasm3Parser.ID, 0)
        def INT(self):
            return self.getToken(CQasm3Parser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQubit" ):
                listener.enterQubit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQubit" ):
                listener.exitQubit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQubit" ):
                return visitor.visitQubit(self)
            else:
                return visitor.visitChildren(self)


    class NegatedIntLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CQasm3Parser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegatedIntLiteral" ):
                listener.enterNegatedIntLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegatedIntLiteral" ):
                listener.exitNegatedIntLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegatedIntLiteral" ):
                return visitor.visitNegatedIntLiteral(self)
            else:
                return visitor.visitChildren(self)


    class FloatLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(CQasm3Parser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatLiteral" ):
                listener.enterFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatLiteral" ):
                listener.exitFloatLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatLiteral" ):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)


    class IntLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CQasm3Parser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntLiteral" ):
                listener.enterIntLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntLiteral" ):
                listener.exitIntLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntLiteral" ):
                return visitor.visitIntLiteral(self)
            else:
                return visitor.visitChildren(self)


    class QubitRangeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CQasm3Parser.ID, 0)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CQasm3Parser.INT)
            else:
                return self.getToken(CQasm3Parser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQubitRange" ):
                listener.enterQubitRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQubitRange" ):
                listener.exitQubitRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQubitRange" ):
                return visitor.visitQubitRange(self)
            else:
                return visitor.visitChildren(self)


    class QubitsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQasm3Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CQasm3Parser.ID, 0)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CQasm3Parser.INT)
            else:
                return self.getToken(CQasm3Parser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQubits" ):
                listener.enterQubits(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQubits" ):
                listener.exitQubits(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQubits" ):
                return visitor.visitQubits(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = CQasm3Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = CQasm3Parser.QubitContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(CQasm3Parser.ID)
                self.state = 50
                self.match(CQasm3Parser.T__7)
                self.state = 51
                self.match(CQasm3Parser.INT)
                self.state = 52
                self.match(CQasm3Parser.T__5)
                pass

            elif la_ == 2:
                localctx = CQasm3Parser.QubitsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(CQasm3Parser.ID)
                self.state = 54
                self.match(CQasm3Parser.T__7)
                self.state = 55
                self.match(CQasm3Parser.INT)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 56
                    self.match(CQasm3Parser.T__6)
                    self.state = 57
                    self.match(CQasm3Parser.INT)
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 63
                self.match(CQasm3Parser.T__5)
                pass

            elif la_ == 3:
                localctx = CQasm3Parser.QubitRangeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(CQasm3Parser.ID)
                self.state = 65
                self.match(CQasm3Parser.T__7)
                self.state = 66
                self.match(CQasm3Parser.INT)
                self.state = 67
                self.match(CQasm3Parser.T__8)
                self.state = 68
                self.match(CQasm3Parser.INT)
                self.state = 69
                self.match(CQasm3Parser.T__5)
                pass

            elif la_ == 4:
                localctx = CQasm3Parser.IntLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.match(CQasm3Parser.INT)
                pass

            elif la_ == 5:
                localctx = CQasm3Parser.NegatedIntLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.match(CQasm3Parser.T__9)
                self.state = 72
                self.match(CQasm3Parser.INT)
                pass

            elif la_ == 6:
                localctx = CQasm3Parser.FloatLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.match(CQasm3Parser.FLOAT)
                pass

            elif la_ == 7:
                localctx = CQasm3Parser.NegatedFloatLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.match(CQasm3Parser.T__9)
                self.state = 75
                self.match(CQasm3Parser.FLOAT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





